test/corpus/delimiter.txt
========
Two chars set delimiter
========

{{=<% %>=}}
<%text%>

---

(template
  (set_delimiter_statement
    (start_delimiter)
    (end_delimiter))
  (interpolation_statement
    (start_delimiter)
    (identifier)
    (end_delimiter)))

========
Double set delimiter
========

{{=<% %>=}}
<%text%>
<%={{ }}=%>
{{text}}

---

(template
  (set_delimiter_statement
    (start_delimiter)
    (end_delimiter))
  (interpolation_statement
    (start_delimiter)
    (identifier)
    (end_delimiter))
  (set_delimiter_statement
    (start_delimiter)
    (end_delimiter))
  (interpolation_statement
    (start_delimiter)
    (identifier)
    (end_delimiter)))

========
One char set delimiter
========

{{=< >=}}
<text>

---

(template
  (set_delimiter_statement
    (start_delimiter)
    (end_delimiter))
  (interpolation_statement
    (start_delimiter)
    (identifier)
    (end_delimiter)))

========
Three chars set delimiter
========

{{=<_< >_>=}}
<_<text>_>

---

(template
  (set_delimiter_statement
    (start_delimiter)
    (end_delimiter))
  (interpolation_statement
    (start_delimiter)
    (identifier)
    (end_delimiter)))
